Creating patch endpoint
