# ginSql/docs/swagger.json
@@ -10,6 +10,9 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "Employee"
+                ],
                 "summary": "Get Employees",
                 "responses": {
                     "200": {
@@ -31,6 +34,9 @@
                 "description": "Create employee in DB",
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "Employees"
                 ],
                 "summary": "Create Employee",
                 "parameters": [
@@ -68,6 +74,9 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "Employee"
+                ],
                 "summary": "Get Employee",
                 "parameters": [
                     {
@@ -81,6 +90,50 @@
                 "responses": {
                     "200": {
                         "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Employee"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {}
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity",
+                        "schema": {}
+                    }
+                }
+            },
+            "patch": {
+                "description": "Update Employee",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Employees"
+                ],
+                "summary": "Patch Employee",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Employee ID",
+                        "name": "employeeID",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Employee Object",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Employee"
+                        }
+                    }
+                ],
+                "responses": {
+                    "202": {
+                        "description": "Accepted",
                         "schema": {
                             "$ref": "#/definitions/models.Employee"
                         }
