# ginSql/endpoints/employees/utils/errors.go
@@ -1,0 +1,8 @@
+package utils
+
+import "errors"
+
+var (
+	ErrMissingEmployeeId   = errors.New("missing employee id")
+	ErrMissingEmployeeData = errors.New("missing employee data in payload")
+)
